// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gjs-gts-ignore-template-plugin > it adds istanbul ignore comment before "template" invocation if template is imported from "@ember/template-compiler" 1`] = `
"import { template as template_fd9b2463e5f141cfb5666b64daa1f11a } from "@ember/template-compiler";
import { on } from '@ember/modifier';
let counter = 0;
function bar() {
  counter++;
  console.log(counter);
}
export default template_fd9b2463e5f141cfb5666b64daa1f11a(\`<button {{on "click" bar}}>
 increment
</button>\`, {
  eval() {
    return eval(arguments[0]);
  }
});"
`;

exports[`gjs-gts-ignore-template-plugin > it does not add istanbul ignore comment before "template" invocation if template is not imported from "@ember/template-compiler" 1`] = `
"import { template as template_fd9b2463e5f141cfb5666b64daa1f11a } from "@ember/template-compiler";
import { on } from '@ember/modifier';
let counter = 0;
function bar() {
  const template = () => {};
  template();
  counter++;
  console.log(counter);
}
export default template_fd9b2463e5f141cfb5666b64daa1f11a(\`<button {{on "click" bar}}>
 increment
</button>\`, {
  eval() {
    return eval(arguments[0]);
  }
});"
`;

exports[`gjs-gts-ignore-template-plugin > it skips files if it\`s a regular js file 1`] = `
"import { template as template_fd9b2463e5f141cfb5666b64daa1f11a } from "@ember/template-compiler";
import { on } from '@ember/modifier';
let counter = 0;
function bar() {
  counter++;
  console.log(counter);
}
export default template_fd9b2463e5f141cfb5666b64daa1f11a(\`<button {{on "click" bar}}>
 increment
</button>\`, {
  eval() {
    return eval(arguments[0]);
  }
});"
`;

exports[`gjs-gts-ignore-template-plugin > it skips files if it\`s a regular ts file 1`] = `
"import { template as template_fd9b2463e5f141cfb5666b64daa1f11a } from "@ember/template-compiler";
import { on } from '@ember/modifier';
let counter = 0;
function bar() {
  counter++;
  console.log(counter);
}
export default template_fd9b2463e5f141cfb5666b64daa1f11a(\`<button {{on "click" bar}}>
 increment
</button>\`, {
  eval() {
    return eval(arguments[0]);
  }
});"
`;
